--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,6 +14,7 @@ jobs:
 
       - name: Install web dependencies
         run: |
+          npm install -g pnpm
           cd web
           pnpm install
 
