--- a/service/tsconfig.json
+++ b/service/tsconfig.json
@@ -1,15 +1,28 @@
 {
-    "compilerOptions": {
-        "target": "es2018",
-        "module": "commonjs",
-        "outDir": "dist",
-        "strict": true,
-        "esModuleInterop": true,
-        "sourceMap": true,
-        "resolveJsonModule": true
-    },
-    "include": [
-        "src/**/*.ts",
-        "src/**/*.d.ts"
-    ]
+  "compilerOptions": {
+    "target": "es2022", // 升级到与 Node.js 18 完全兼容的 ES 版本
+    "module": "node16", // 更符合现代 Node.js 的模块解析模式
+    "moduleResolution": "node16", // 显式声明模块解析策略
+    "outDir": "dist",
+    "rootDir": "./src",
+    "strict": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true, // 避免大小写敏感系统的问题
+    "skipLibCheck": true, // 提升编译速度
+    "sourceMap": false, // 生产环境关闭 sourcemap
+    "inlineSources": false, // 确保不嵌入源码
+    "resolveJsonModule": true,
+    "types": ["node"], // 显式声明全局类型
+    "diagnostics": true, // 显示编译详细信息
+    "removeComments": true
+  },
+  "include": ["src/**/*.ts"],
+  "exclude": [
+    // 明确排除非必要文件
+    "**/__tests__",
+    "**/*.spec.ts",
+    "**/*.mock.ts",
+    "docker",
+    "scripts"
+  ]
 }
