--- a/service/package.json
+++ b/service/package.json
@@ -5,31 +5,31 @@
   "scripts": {
     "dev": "nodemon",
     "start": "nodemon",
-    "build": "tsc --project tsconfig.json && cp -r ./static ./dist/",
+    "build": "tsc --project tsconfig.json",
     "lint": "eslint . --ext .ts --fix & pnpm prettier",
     "prettier": "prettier --write 'src/**/*.ts'"
   },
   "dependencies": {
-    "@types/koa": "^2.13.6",
-    "@types/koa-compress": "^4.0.3",
-    "@types/koa-logger": "^3.1.2",
-    "@types/koa-static": "^4.0.2",
-    "@types/node": "^20.4.1",
-    "@types/node-schedule": "^2.1.0",
-    "@typescript-eslint/eslint-plugin": "^5.61.0",
-    "@typescript-eslint/parser": "^5.61.0",
-    "axios": "^1.6.7",
-    "eslint": "^8.44.0",
-    "koa": "^2.7.0",
-    "koa-compress": "^4.0.1",
-    "koa-logger": "^3.2.0",
+    "@types/koa": "^2.15.0",
+    "@types/koa-compress": "^4.0.6",
+    "@types/koa-logger": "^3.1.5",
+    "@types/koa-static": "^4.0.4",
+    "@types/node": "18.15.3",
+    "@types/node-schedule": "^2.1.7",
+    "@typescript-eslint/eslint-plugin": "^8.26.1",
+    "@typescript-eslint/parser": "^8.26.1",
+    "axios": "^1.8.2",
+    "eslint": "^9.22.0",
+    "koa": "^2.16.0",
+    "koa-compress": "^5.1.1",
+    "koa-logger": "^3.2.1",
     "koa-static": "^5.0.0",
-    "mime-db": "1.52.0",
-    "node-schedule": "^1.3.2",
-    "nodemon": "^1.19.1",
-    "prettier": "^3.0.0",
-    "ts-node": "^10.9.1",
+    "mime-db": "1.53.0",
+    "node-schedule": "^2.1.1",
+    "nodemon": "^3.1.9",
+    "prettier": "^3.5.3",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.6"
+    "typescript": "^5.8.2"
   }
 }
