--- a/web/package.json
+++ b/web/package.json
@@ -10,23 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "antd": "^5.23.4",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "antd": "^5.24.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@bit-ocean/auto-import": "^0.0.50",
-    "@types/node": "^20.17.17",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
+    "@types/node": "18.15.3",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "@typescript-eslint/eslint-plugin": "^8.26.1",
+    "@typescript-eslint/parser": "^8.26.1",
     "@vitejs/plugin-react-swc": "^3.8.0",
     "eslint": "^8.57.1",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.19",
-    "typescript": "^5.7.3",
-    "unplugin-auto-import": "^19.0.0",
-    "vite": "^6.1.0"
+    "typescript": "^5.8.2",
+    "unplugin-auto-import": "^19.1.1",
+    "vite": "^6.2.1"
   }
 }
