--- a/service/package.json
+++ b/service/package.json
@@ -14,7 +14,7 @@
     "@types/koa-compress": "^4.0.6",
     "@types/koa-logger": "^3.1.5",
     "@types/koa-static": "^4.0.4",
-    "@types/node": "18.15.3",
+    "@types/node": "^18.15.3",
     "@types/node-schedule": "^2.1.7",
     "@typescript-eslint/eslint-plugin": "^8.26.1",
     "@typescript-eslint/parser": "^8.26.1",
@@ -26,11 +26,13 @@
     "typescript": "^5.8.2"
   },
   "dependencies": {
-    "axios": "^1.8.2",
+    "axios": "^1.8.3",
     "koa": "^2.16.0",
     "koa-compress": "^5.1.1",
+    "koa-helmet": "^8.0.1",
     "koa-logger": "^3.2.1",
     "koa-static": "^5.0.0",
-    "node-schedule": "^2.1.1"
+    "node-schedule": "^2.1.1",
+    "winston": "^3.17.0"
   }
 }
