--- a/web/package.json
+++ b/web/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "build": "vite build",
+    "lint": "eslint --fix",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -15,15 +15,16 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^4.11.0",
     "@bit-ocean/auto-import": "^0.0.50",
+    "@eslint-react/eslint-plugin": "^1.41.0",
     "@types/node": "18.15.3",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
-    "@typescript-eslint/eslint-plugin": "^8.26.1",
-    "@typescript-eslint/parser": "^8.26.1",
     "@vitejs/plugin-react-swc": "^3.8.0",
-    "eslint": "^8.57.1",
-    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint": "^9.23.0",
+    "eslint-plugin-format": "^1.0.1",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "typescript": "^5.8.2",
     "unplugin-auto-import": "^19.1.1",
