--- a/service/package.json
+++ b/service/package.json
@@ -11,14 +11,11 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.11.0",
-    "@types/koa": "^2.15.0",
-    "@types/koa-compress": "^4.0.6",
-    "@types/koa-logger": "^3.1.5",
-    "@types/koa-static": "^4.0.4",
     "@types/node": "^18.15.3",
     "@types/node-schedule": "^2.1.7",
     "@typescript-eslint/eslint-plugin": "^8.26.1",
     "@typescript-eslint/parser": "^8.26.1",
+    "@types/timestring": "^6.0.2",
     "eslint": "^9.22.0",
     "eslint-plugin-format": "^1.0.1",
     "nodemon": "^3.1.9",
@@ -28,13 +25,12 @@
     "typescript": "^5.8.2"
   },
   "dependencies": {
+    "@fastify/compress": "^8.0.1",
+    "@fastify/helmet": "^13.0.1",
+    "@fastify/static": "^8.1.1",
     "axios": "^1.8.3",
-    "koa": "^2.16.0",
-    "koa-compress": "^5.1.1",
-    "koa-helmet": "^8.0.1",
-    "koa-logger": "^3.2.1",
-    "koa-static": "^5.0.0",
+    "fastify": "^5.2.2",
     "node-schedule": "^2.1.1",
-    "winston": "^3.17.0"
+    "timestring": "^6.0.0"
   }
 }
