--- a/service/package.json
+++ b/service/package.json
@@ -11,11 +11,11 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.11.0",
-    "@types/node": "^18.15.3",
+    "@types/node": "^22.14.1",
     "@types/node-schedule": "^2.1.7",
+    "@types/timestring": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^8.26.1",
     "@typescript-eslint/parser": "^8.26.1",
-    "@types/timestring": "^6.0.2",
     "eslint": "^9.22.0",
     "eslint-plugin-format": "^1.0.1",
     "nodemon": "^3.1.9",
@@ -32,5 +32,10 @@
     "fastify": "^5.2.2",
     "node-schedule": "^2.1.1",
     "timestring": "^6.0.0"
-  }
+  },
+  "engines": {
+    "node": ">=22.14.0",
+    "pnpm": "=8.15.4"
+  },
+  "packageManager": "pnpm@8.15.4"
 }
