--- a/web/package.json
+++ b/web/package.json
@@ -30,5 +30,10 @@
     "typescript": "^5.8.3",
     "unplugin-auto-import": "^19.1.2",
     "vite": "^6.2.6"
-  }
+  },
+  "engines": {
+    "node": ">=22.14.0",
+    "pnpm": "=8.15.4"
+  },
+  "packageManager": "pnpm@8.15.4"
 }
