--- a/web/tsconfig.node.json
+++ b/web/tsconfig.node.json
@@ -7,5 +7,5 @@
     "allowSyntheticDefaultImports": true,
     "target": "ESNext"
   },
-  "include": ["vite.config.ts"]
+  "include": ["vite.config.ts", "./plugins/**/*.ts"]
 }
