--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,7 @@
-version: '3'
-
 services:
   top1000-iyuu:
     container_name: top1000-iyuu
-    image: 782042369/top1000-iyuu:v1.8
+    image: 782042369/top1000-iyuu:latest
     ports:
       - 7066:7066
     restart: always
