--- a/web/package.json
+++ b/web/package.json
@@ -10,27 +10,28 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "ahooks": "^3.8.4",
-    "antd": "^5.24.8",
+    "ahooks": "^3.9.0",
+    "antd": "^5.26.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.12.0",
+    "@antfu/eslint-config": "^4.16.2",
     "@bit-ocean/auto-import": "^0.0.53",
-    "@eslint-react/eslint-plugin": "^1.48.4",
-    "@types/node": "22.15.1",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
-    "@vitejs/plugin-react-swc": "^3.9.0",
+    "@eslint-react/eslint-plugin": "^1.52.2",
+    "@types/node": "24.0.10",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "@vitejs/plugin-react-swc": "^3.10.2",
     "es-module-lexer": "^1.7.0",
-    "eslint": "^9.25.1",
+    "eslint": "^9.30.1",
     "eslint-plugin-format": "^1.0.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "typescript": "^5.8.3",
-    "unplugin-auto-import": "^19.1.2",
-    "vite": "^6.3.3"
+    "unplugin-auto-import": "^19.3.0",
+    "vite": "^7.0.0",
+    "vite-plugin-html": "^3.2.2"
   },
   "engines": {
     "node": ">=22.14.0",
