--- a/service/package.json
+++ b/service/package.json
@@ -17,10 +17,10 @@
     "@typescript-eslint/parser": "^8.36.0",
     "eslint": "^9.30.1",
     "eslint-plugin-format": "^1.0.1",
+    "fastify-tsconfig": "^3.0.0",
     "nodemon": "^3.1.10",
     "prettier": "^3.6.2",
     "ts-node": "^10.9.2",
-    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.3"
   },
   "dependencies": {
