--- a/service/tsconfig.json
+++ b/service/tsconfig.json
@@ -1,47 +1,12 @@
 {
+  "extends": "fastify-tsconfig",
   "compilerOptions": {
-    "target": "es2023", // 与 Node.js 24+ 原生支持的 ES 特性保持一致
-    "lib": ["es2023","DOM"], // 显式指定基础库版本
-    "module": "NodeNext", // 官方推荐的 Node ESM 模式
-    "moduleResolution": "nodenext", // 现代模块解析策略
     "outDir": "dist",
-    "rootDir": "./src",
-
-    /* 严格类型检查 */
-    "strict": true,
-    "noImplicitAny": true,
-    "strictNullChecks": true,
-    "strictFunctionTypes": true,
-    "strictBindCallApply": true,
-
-    /* 模块兼容性配置 */
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "resolveJsonModule": true,
-
-    /* 生产优化 */
     "sourceMap": false,
-    "inlineSources": false,
-    "removeComments": true,
-    "noEmitOnError": true,     // 编译错误时阻止生成
-
-    /* 类型声明 */
-    "types": ["node"],
-    "typeRoots": ["./node_modules/@types"],
-
-    /* 工程规范 */
-    "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true,
-
-    "allowImportingTsExtensions": true,
-    "rewriteRelativeImportExtensions": true,
+    "moduleResolution": "NodeNext",
+    "module": "NodeNext",
+    "target": "ES2022",
+    "esModuleInterop": true
   },
-  "include": ["src/**/*.ts"],
-  "exclude": [
-    "**/__tests__",
-    "**/*.spec.ts",
-    "**/*.mock.ts",
-    "docker",
-    "scripts"
-  ]
+  "include": ["src/**/*.ts"]
 }
