--- a/service/package.json
+++ b/service/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "nodemon",
     "start": "nodemon",
-    "build": "tsc --project tsconfig.json",
+    "build": "tsc",
     "lint": "eslint --fix",
     "prettier": "prettier --write 'src/**/*.ts'"
   },
