--- a/web/package.json
+++ b/web/package.json
@@ -37,5 +37,10 @@
     "node": ">=24.3.0",
     "pnpm": "=10.12.4"
   },
-  "packageManager": "pnpm@10.12.4"
+  "packageManager": "pnpm@10.12.4",
+  "pnpm": {
+    "overrides": {
+      "vite": "npm:rolldown-vite@latest"
+    }
+  }
 }
