--- a/web/package.json
+++ b/web/package.json
@@ -10,14 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ag-grid-community/locale": "^34.0.2",
+    "ag-grid-community": "^34.0.2",
+    "ag-grid-enterprise": "^34.0.2",
+    "ag-grid-react": "^34.0.2",
     "ahooks": "^3.9.0",
-    "antd": "^5.26.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.17.0",
-    "@bit-ocean/auto-import": "^0.0.53",
     "@eslint-react/eslint-plugin": "^1.52.3",
     "@types/node": "24.0.14",
     "@types/react": "^19.1.8",
