--- a/web/package.json
+++ b/web/package.json
@@ -25,14 +25,14 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react-swc": "^3.10.2",
-    "@xiaowaibuzheng/rolldown-vite-split-chunks": "^0.0.11",
+    "@xiaowaibuzheng/rolldown-vite-split-chunks": "^0.0.12",
     "eslint": "^9.31.0",
     "eslint-plugin-format": "^1.0.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "typescript": "^5.8.3",
     "unplugin-auto-import": "^19.3.0",
-    "vite": "^7.0.4",
+    "vite": "npm:rolldown-vite@^7.0.9",
     "vite-plugin-html": "^3.2.2"
   },
   "engines": {
