--- a/web/tsconfig.node.json
+++ b/web/tsconfig.node.json
@@ -1,11 +1,11 @@
 {
   "compilerOptions": {
     "composite": true,
-    "skipLibCheck": true,
+    "target": "ESNext",
     "module": "ESNext",
     "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true,
-    "target": "ESNext"
+    "skipLibCheck": true
   },
   "include": ["vite.config.ts", "./plugins/**/*.ts"]
 }
