--- a/web/package.json
+++ b/web/package.json
@@ -37,7 +37,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "typescript": "^5.8.3",
     "unplugin-auto-import": "^19.3.0",
-    "vite": "npm:rolldown-vite@^7.0.9",
+    "vite": "npm:rolldown-vite@latest",
     "vite-plugin-html": "^3.2.2"
   },
   "pnpm": {
