--- a/web/package.json
+++ b/web/package.json
@@ -24,20 +24,20 @@
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.17.0",
+    "@antfu/eslint-config": "^4.18.0",
     "@eslint-react/eslint-plugin": "^1.52.3",
-    "@types/node": "24.0.14",
+    "@types/node": "24.1.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "@vitejs/plugin-react-swc": "^3.11.0",
-    "@xiaowaibuzheng/rolldown-vite-split-chunks": "^0.0.12",
+    "@vitejs/plugin-react": "^4.7.0",
+    "@xiaowaibuzheng/rolldown-vite-split-chunks": "^0.0.13",
     "eslint": "^9.31.0",
     "eslint-plugin-format": "^1.0.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "typescript": "^5.8.3",
     "unplugin-auto-import": "^19.3.0",
-    "vite": "npm:rolldown-vite@latest",
+    "vite": "npm:rolldown-vite@^7.0.10",
     "vite-plugin-html": "^3.2.2"
   },
   "pnpm": {
