build(deps): 更新 pnpm 版本依赖
- 在 Dockerfile 中将 pnpm 版本从 10.12.4 修改为 ^10，以支持最新的 10.x 版本
- 在 service 和 web 项目的 package.json 中，将 pnpm 版本从 =10.12.4 修改为 >=10.12.4，以允许使用更高版本的 pnpm
- 移除了 service 和 web 项目的 package.json 中的 "packageManager" 字段，以减少依赖锁定

--- a/service/package.json
+++ b/service/package.json
@@ -2,10 +2,9 @@
   "name": "top_work",
   "version": "1.0.0",
   "private": true,
-  "packageManager": "pnpm@10.14.0",
   "engines": {
     "node": ">=24.3.0",
-    "pnpm": "=10.12.4"
+    "pnpm": ">=10.12.4"
   },
   "scripts": {
     "dev": "nodemon",
