--- a/web/package.json
+++ b/web/package.json
@@ -3,10 +3,9 @@
   "type": "module",
   "version": "0.0.0",
   "private": true,
-  "packageManager": "pnpm@10.12.4",
   "engines": {
     "node": ">=24.3.0",
-    "pnpm": "=10.12.4"
+    "pnpm": ">=10.12.4"
   },
   "scripts": {
     "dev": "vite",
