--- a/web/package.json
+++ b/web/package.json
@@ -23,12 +23,12 @@
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^5.1.0",
+    "@antfu/eslint-config": "^5.2.0",
     "@eslint-react/eslint-plugin": "^1.52.3",
     "@types/node": "24.2.0",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
-    "@vitejs/plugin-react": "^4.7.0",
+    "@vitejs/plugin-react-oxc": "^0.4.0",
     "@xiaowaibuzheng/rolldown-vite-split-chunks": "^0.0.14",
     "eslint": "^9.32.0",
     "eslint-plugin-format": "^1.0.1",
@@ -36,7 +36,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "typescript": "^5.9.2",
     "unplugin-auto-import": "^20.0.0",
-    "vite": "npm:rolldown-vite@^7.0.12",
+    "vite": "npm:rolldown-vite@^7.1.0",
     "vite-plugin-html": "^3.2.2"
   },
   "pnpm": {
