--- a/web/package.json
+++ b/web/package.json
@@ -28,7 +28,7 @@
     "@types/node": "24.2.0",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
-    "@vitejs/plugin-react-oxc": "^0.4.0",
+    "@vitejs/plugin-react": "^5.0.0",
     "@xiaowaibuzheng/rolldown-vite-split-chunks": "^0.0.14",
     "eslint": "^9.32.0",
     "eslint-plugin-format": "^1.0.1",
