--- a/web/package.json
+++ b/web/package.json
@@ -16,22 +16,14 @@
   "dependencies": {
     "@ag-grid-community/locale": "^34.1.2",
     "ag-grid-community": "^34.1.2",
-    "ag-grid-enterprise": "^34.1.2",
-    "ag-grid-react": "^34.1.2",
-    "ahooks": "^3.9.3",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "ag-grid-enterprise": "^34.1.2"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^5.2.1",
     "@types/node": "24.3.0",
-    "@types/react": "^19.1.10",
-    "@types/react-dom": "^19.1.7",
-    "@vitejs/plugin-react": "^5.0.1",
     "@xiaowaibuzheng/rolldown-vite-split-chunks": "^0.0.14",
     "eslint": "^9.33.0",
     "typescript": "^5.9.2",
-    "unplugin-auto-import": "^20.0.0",
     "vite": "npm:rolldown-vite@^7.1.4",
     "vite-plugin-html": "^3.2.2"
   },
