--- a/service/package.json
+++ b/service/package.json
@@ -10,7 +10,7 @@
     "dev": "nodemon",
     "start": "nodemon",
     "build": "tsc",
-    "lint": "eslint --fix",
+    "lint": "eslint --fix --concurrency=auto",
     "prettier": "prettier --write 'src/**/*.ts'"
   },
   "dependencies": {
@@ -21,8 +21,8 @@
     "timestring": "^7.0.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^5.2.1",
-    "@types/node": "^24.3.0",
+    "@antfu/eslint-config": "^5.2.2",
+    "@types/node": "^24.3.1",
     "@types/timestring": "^7.0.0",
     "eslint": "^9.34.0",
     "eslint-plugin-format": "^1.0.1",
