--- a/web/package.json
+++ b/web/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build --emptyOutDir",
-    "lint": "eslint --fix",
+    "lint": "eslint --fix --concurrency=auto",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -19,8 +19,8 @@
     "ag-grid-enterprise": "^34.1.2"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^5.2.1",
-    "@types/node": "24.3.0",
+    "@antfu/eslint-config": "^5.2.2",
+    "@types/node": "24.3.1",
     "@xiaowaibuzheng/rolldown-vite-split-chunks": "^0.0.15",
     "eslint": "^9.34.0",
     "typescript": "^5.9.2",
