chore(service): 移除项目中不再使用的 Prettier 依赖
从 package.json 和 pnpm-lock.yaml 文件中删除了 Prettier 相关配置及依赖项，
因为代码格式化功能已由 ESLint 统一处理，此举可减少冗余依赖并简化开发流程。

--- a/service/package.json
+++ b/service/package.json
@@ -10,8 +10,7 @@
     "dev": "nodemon",
     "start": "nodemon",
     "build": "tsc",
-    "lint": "eslint --fix --concurrency=auto",
-    "prettier": "prettier --write 'src/**/*.ts'"
+    "lint": "eslint --fix --concurrency=auto"
   },
   "dependencies": {
     "@fastify/compress": "^8.3.0",
@@ -28,7 +27,6 @@
     "eslint-plugin-format": "^1.0.2",
     "fastify-tsconfig": "^3.0.0",
     "nodemon": "^3.1.11",
-    "prettier": "^3.6.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
