--- a/web/package.json
+++ b/web/package.json
@@ -19,12 +19,12 @@
     "ag-grid-enterprise": "^34.3.1"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^6.2.0",
+    "@antfu/eslint-config": "^6.3.0",
     "@types/node": "24.10.1",
     "@xiaowaibuzheng/rolldown-vite-split-chunks": "^0.0.17",
     "eslint": "^9.39.1",
     "typescript": "^5.9.3",
-    "vite": "npm:rolldown-vite@^7.2.9",
+    "vite": "8.0.0-beta.0",
     "vite-plugin-html": "^3.2.2"
   }
 }
