--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,49 @@
 # Logs
 logs
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
 
-*/node_modules
-dist
-dist-ssr
-*.local
+# Dependency directories
+node_modules/
 
-# mac files
-.DS_Store
+# Optional npm cache directory
+.npm
 
-service/static
-public
+# Optional eslint cache
+.eslintcache
+
+# Optional REPL history
+.node_repl_history
+
+# dist
+web-dist/
+public/
+
+# Docker
+.dockerignore
+
+# Go
+service/scripts/minifier
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+
+# Test binary, built with `go test -c`
+*.test
+
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
+
+# Dependency directories
+vendor/
+
+# Go build tags
+app-minimal/
+
+# Go binaries
+main
