--- a/.dockerignore
+++ b/.dockerignore
@@ -1,11 +1,26 @@
-# 忽略所有日志文件
-logs
-
-# 忽略node_modules目录
-node_modules
-
-# 忽略Dockerfile本身
-Dockerfile
-
-# 忽略.git目录
+# Git
 .git
+.gitignore
+.github
+
+# IDE
+.vscode
+.idea
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Documentation
+README.md
+*.md
+
+# Logs
+*.log
+
+# Test files
+*_test.go
+test/
