--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,6 @@ node_modules/
 
 # dist
 web-dist/
-public/
 
 # Docker
 .dockerignore
@@ -47,3 +46,7 @@ app-minimal/
 
 # Go binaries
 main
+# Environment variables（敏感信息）
+.env
+.env.local
+.env.production
