🔧 chore(deploy): 更新docker-compose配置使用预构建镜像
- 使用 782042369/top1000-iyuu:latest 预构建镜像
- 移除本地构建配置
- 简化环境变量配置
- 添加 .env 文件只读挂载

简化部署流程，直接使用 Docker Hub 镜像。

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,25 +5,11 @@
 version: '3.8'
 
 services:
-  top1000:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: top1000
+  top1000-iyuu:
+    container_name: top1000-iyuu
+    image: 782042369/top1000-iyuu:latest
     ports:
-      - "${PORT:-7066}:7066"
-    env_file:
-      - .env
-    environment:
-      - PORT=${PORT:-7066}
-      - TZ=Asia/Shanghai
-      - REDIS_ADDR=${REDIS_ADDR}
-      - REDIS_PASSWORD=${REDIS_PASSWORD}
-    restart: unless-stopped
-    # 注意：已移除健康检查（每日100访问量不需要）
-    # 如需健康检查，请使用 Kubernetes Probe 或外部监控
-
-# Redis 服务已移除，请使用外部 Redis 实例
-# 在 .env 文件中配置：
-# REDIS_ADDR=your-redis-host:port
-# REDIS_PASSWORD=your-redis-password
+      - 7066:7066
+    restart: always
+    volumes:
+      - ./.env:/app/.env:ro
