--- a/web/package.json
+++ b/web/package.json
@@ -15,8 +15,7 @@
   },
   "dependencies": {
     "@ag-grid-community/locale": "^35.0.0",
-    "ag-grid-community": "^35.0.0",
-    "ag-grid-enterprise": "^35.0.0"
+    "ag-grid-community": "^35.0.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^6.7.3",
