--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -84,21 +84,43 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const caches = await github.rest.actions.getActionsCacheList({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-            })
             const now = new Date()
             const thirtyDaysAgo = new Date(now.getTime() - 30 * 24 * 60 * 60 * 1000)
+            let page = 1
+            let deletedCount = 0
 
-            for (const cache of caches.data.actions_caches) {
-              const lastUsed = new Date(cache.last_accessed_at)
-              if (lastUsed < thirtyDaysAgo) {
-                console.log(`Deleting cache: ${cache.key} (last used: ${cache.last_accessed_at})`)
-                await github.rest.actions.deleteActionsCacheById({
-                  owner: context.repo.owner,
-                  repo: context.repo.repo,
-                  cache_id: cache.id,
-                })
+            // 循环处理所有页的缓存（每页最多100个）
+            while (true) {
+              const caches = await github.rest.actions.getActionsCacheList({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                per_page: 100,  // 每页最多100个
+                page: page,
+              })
+
+              if (!caches.data.actions_caches || caches.data.actions_caches.length === 0) {
+                break  // 没有更多缓存了
               }
+
+              for (const cache of caches.data.actions_caches) {
+                const lastUsed = new Date(cache.last_accessed_at)
+                if (lastUsed < thirtyDaysAgo) {
+                  console.log(`Deleting cache: ${cache.key} (last used: ${cache.last_accessed_at})`)
+                  await github.rest.actions.deleteActionsCacheById({
+                    owner: context.repo.owner,
+                    repo: context.repo.repo,
+                    cache_id: cache.id,
+                  })
+                  deletedCount++
+                }
+              }
+
+              // 如果当前页少于100个，说明已经是最后一页了
+              if (caches.data.actions_caches.length < 100) {
+                break
+              }
+
+              page++
             }
+
+            console.log(`✅ 总共删除了 ${deletedCount} 个超过30天的缓存`)
