♻️ refactor(config,storage): 简化配置结构并支持REDIS_DB环境变量
- 移除不需要的环境变量配置项（PORT、WEB_DIST_DIR、CACHE_DURATION等）
- 添加REDIS_DB环境变量支持，可自定义Redis数据库编号
- 新增getEnvInt辅助函数用于读取整数环境变量
- 简化Config结构体，只保留必须从环境变量读取的配置
- 统一使用DefaultRedisKey常量替代动态拼接的key
- 移除getEnvDuration函数，不再需要

简化理由：
- 小项目配置项过多会增加复杂度
- 大部分配置有合理默认值，无需环境变量覆盖
- REDIS_DB提供了灵活性，可使用不同Redis数据库（0-15）

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,12 @@
 # Docker Compose 配置 - Top1000 服务
-# 版本：Scratch 极简版（6-8MB）
+# 版本：Scratch 极简版（4.5-5MB）
 # Redis：使用外部实例（不在容器内启动）
 # 访问量：每日约100访问（已优化）
+#
+# 环境变量优先级：
+# 1. .env 文件（优先）
+# 2. 系统环境变量（覆盖 .env）
+# 3. environment 指令（最高优先级）
 version: '3.8'
 
 services:
@@ -9,7 +14,11 @@ services:
     container_name: top1000-iyuu
     image: 782042369/top1000-iyuu:latest
     ports:
-      - 7066:7066
+      - "${PORT:-7066}:7066"
     restart: always
-    volumes:
-      - ./.env:/app/.env:ro
+    # 优先从 .env 文件读取，其次从环境变量读取
+    env_file:
+      - .env
+    # 可选：在这里覆盖环境变量（最高优先级）
+    # environment:
+    #   - REDIS_ADDR=custom.redis.com:6379
