--- a/.env.example
+++ b/.env.example
@@ -1,24 +1,5 @@
-# 服务器配置
-PORT=7066
 
-# 前端构建目录
-WEB_DIST_DIR=./web-dist
-
-# API 配置
-TOP1000_API_URL=https://api.iyuu.cn/top1000.php
-
-# 缓存配置
-CACHE_DURATION=24h
-DATA_EXPIRE_DURATION=24h
-
-# Redis 配置
-REDIS_ENABLED=true
+# Redis 配置（必填，否则无法运行）
 REDIS_ADDR=127.0.0.1:26739
-REDIS_PASSWORD=xxxxxx
+REDIS_PASSWORD=填写Redis密码
 REDIS_DB=0
-REDIS_KEY_PREFIX=top1000:
-
-# CORS 配置（多个域名用逗号分隔）
-# 生产环境建议设置具体域名，例如：https://example.com,https://www.example.com
-# 开发环境可以留空或设置为 *
-CORS_ORIGINS=
