🔧 chore(config): 优化项目配置文件
- 更新 .env.example，新增 IYUU_SIGN 环境变量说明
- 更新 .gitignore，添加 web-dist/ 目录忽略规则
- 优化 Vite 构建配置，改进代码分割和缓存策略

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
-
 # Redis 配置（必填，否则无法运行）
 REDIS_ADDR=127.0.0.1:26739
 REDIS_PASSWORD=填写Redis密码
 REDIS_DB=0
+
+# IYUU 配置（可选，用于调用站点API）
+IYUU_SIGN=填写IYUU签名
