--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
-# Redis 配置（必填，否则无法运行）
-REDIS_ADDR=127.0.0.1:26739
-REDIS_PASSWORD=填写Redis密码
+# Redis 配置
+REDIS_ADDR=localhost:6379
+REDIS_PASSWORD=your_redis_password
 REDIS_DB=0
 
-# IYUU 配置（可选，用于调用站点API）
-IYUU_SIGN=填写IYUU签名
+# IYUU API 配置（可选，用于获取站点列表）
+# 获取方式：访问 https://iyuu.cn/ 注册并获取签名
+IYUU_SIGN=your_iyuu_sign_here
