docs: 修改 IYUU_SIGN 配置说明

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,6 @@ REDIS_ADDR=localhost:6379
 REDIS_PASSWORD=your_redis_password
 REDIS_DB=0
 
-# IYUU API 配置（可选，用于获取站点列表）
+# IYUU API 配置（用于获取站点列表）
 # 获取方式：访问 https://iyuu.cn/ 注册并获取签名
 IYUU_SIGN=your_iyuu_sign_here
