feat(web): install ag-grid-enterprise and unify versions
- install ag-grid-enterprise@35.0.1 for export functionality
- update ag-grid-community from 35.0.0 to 35.0.1 for version alignment
- resolve type compatibility issues between community and enterprise modules

--- a/web/package.json
+++ b/web/package.json
@@ -15,7 +15,8 @@
   },
   "dependencies": {
     "@ag-grid-community/locale": "^35.0.0",
-    "ag-grid-community": "^35.0.0"
+    "ag-grid-community": "^35.0.1",
+    "ag-grid-enterprise": "^35.0.1"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^6.7.3",
