--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -15,14 +15,6 @@ on:
       - '.gitignore'
       - '.claude/**'
       - 'docs/**'
-  pull_request:
-    branches: [ main ]
-    paths-ignore:
-      - '**.md'
-      - 'LICENSE'
-      - '.gitignore'
-      - '.claude/**'
-      - 'docs/**'
   workflow_dispatch:
   schedule:
     # 每周日凌晨 2 点构建并清理缓存
@@ -35,115 +27,11 @@ env:
 
 jobs:
   # ============================================
-  # Job 1: 代码质量检查（Lint）
-  # ============================================
-  lint:
-    name: 代码质量检查
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-
-    steps:
-      - name: 检出代码
-        uses: actions/checkout@v4
-
-      - name: 设置 Go 环境
-        uses: actions/setup-go@v5
-        with:
-          go-version: '1.25'
-          cache: true
-
-      - name: Go Lint
-        working-directory: ./server
-        run: |
-          echo "检查 Go 代码格式..."
-          if [ "$(gofmt -s -l . | wc -l)" -gt 0 ]; then
-            echo "以下文件格式不正确："
-            gofmt -s -l .
-            exit 1
-          fi
-          echo "Go 代码格式检查通过"
-
-      - name: 设置 Node.js 环境
-        uses: actions/setup-node@v4
-        with:
-          node-version: '24'
-          cache: 'pnpm'
-          cache-dependency-path: web/pnpm-lock.yaml
-
-      - name: 安装 pnpm
-        run: corepack enable && corepack prepare pnpm@10 --activate
-
-      - name: TypeScript Lint
-        working-directory: ./web
-        run: |
-          pnpm install --frozen-lockfile
-          pnpm lint || echo "Lint 检查完成"
-
-  # ============================================
-  # Job 2: 自动化测试
-  # ============================================
-  test:
-    name: 自动化测试
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-
-    services:
-      redis:
-        image: redis:7-alpine
-        ports:
-          - 6379:6379
-        options: >-
-          --health-cmd "redis-cli ping"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-
-    steps:
-      - name: 检出代码
-        uses: actions/checkout@v4
-
-      - name: 设置 Go 环境
-        uses: actions/setup-go@v5
-        with:
-          go-version: '1.25'
-          cache: true
-
-      - name: Go Test
-        working-directory: ./server
-        env:
-          REDIS_ADDR: localhost:6379
-          REDIS_PASSWORD: ''
-        run: |
-          echo "运行 Go 测试..."
-          go test -v -race -coverprofile=coverage.out ./... || echo "Go 测试完成"
-          go tool cover -func=coverage.out || echo "覆盖率报告生成完成"
-
-      - name: 设置 Node.js 环境
-        uses: actions/setup-node@v4
-        with:
-          node-version: '24'
-          cache: 'pnpm'
-          cache-dependency-path: web/pnpm-lock.yaml
-
-      - name: 安装 pnpm
-        run: corepack enable && corepack prepare pnpm@10 --activate
-
-      - name: TypeScript Test
-        working-directory: ./web
-        run: |
-          pnpm install --frozen-lockfile
-          pnpm test || echo "测试完成"
-
-  # ============================================
-  # Job 3: Docker 构建（多架构）
+  # Job 1: Docker 构建（多架构）
   # ============================================
   build:
     name: Docker 构建（多架构）
     runs-on: ubuntu-latest
-    needs: [lint, test]
-    if: github.event_name != 'pull_request'
     outputs:
       tags: ${{ steps.meta.outputs.tags }}
       digest: ${{ steps.build.outputs.digest }}
@@ -167,7 +55,6 @@ jobs:
             network=host
 
       - name: 登录 Docker Hub
-        if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERUSERNAME }}
@@ -200,7 +87,7 @@ jobs:
           context: .
           file: ./Dockerfile
           platforms: linux/amd64,linux/arm64
-          push: ${{ github.event_name != 'pull_request' }}
+          push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: |
@@ -237,7 +124,7 @@ jobs:
           echo "构建时间: $(date -u '+%Y-%m-%d %H:%M:%S UTC')"
 
   # ============================================
-  # Job 5: 清理旧缓存
+  # Job 2: 清理旧缓存
   # ============================================
   cleanup-cache:
     name: 清理旧缓存
