ci(docker): 简化 Docker 构建缓存策略
- 移除本地缓存配置，仅使用 GitHub Actions 缓存
- 删除缓存优化步骤以简化工作流
- 移除 BUILDKIT_INLINE_CACHE 和 GOMODCACHE build 参数
- 禁用 provenance 和 sbom 以加快构建速度

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -89,32 +89,10 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: |
-            type=gha
-            type=local,src=/tmp/.buildx-cache
-          cache-to: |
-            type=gha,mode=max
-            type=local,dest=/tmp/.buildx-cache-new,mode=max
-          build-args: |
-            BUILDKIT_INLINE_CACHE=1
-            GOMODCACHE=/go/pkg/mod
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
           provenance: false
           sbom: false
-
-      - name: 优化本地缓存
-        run: |
-          echo "优化构建缓存..."
-          if [ -d /tmp/.buildx-cache ]; then
-            echo "当前缓存大小："
-            du -sh /tmp/.buildx-cache
-            rm -rf /tmp/.buildx-cache-backup || true
-            mv /tmp/.buildx-cache /tmp/.buildx-cache-backup || true
-          fi
-          if [ -d /tmp/.buildx-cache-new ]; then
-            mv /tmp/.buildx-cache-new /tmp/.buildx-cache || true
-          fi
-          rm -rf /tmp/.buildx-cache-backup || true
-          echo "缓存优化完成"
 
       - name: 显示镜像信息
         run: |
